# phoenix-firewall

./: .gitignore  .goreleaser.yml  Cargo.toml  Makefile  README.md  go.sum  main.go
.github/workflows/: release.yml
cmd/: proxy.go  scan.go
integrations/azure-devops/: README.md  phoenix-firewall.yml
integrations/azure-devops/examples/: basic.yml  strict.yml
integrations/bitbucket/: README.md  pipe.yml
integrations/bitbucket/examples/: basic.bitbucket-pipelines.yml  strict.bitbucket-pipelines.yml
integrations/generic/: README.md  check-lockfile.sh  install.sh
integrations/github-action/examples/: strict-with-harden-runner.yml
integrations/gitlab-ci/: README.md  phoenix-firewall.yml
integrations/gitlab-ci/examples/: basic.gitlab-ci.yml  strict-mode.gitlab-ci.yml
integrations/jenkins/: Jenkinsfile  README.md
integrations/jenkins/examples/: Jenkinsfile.basic  Jenkinsfile.strict
integrations/jenkins/vars/: phoenixFirewall.groovy
internal/client/: firewall.go
internal/config/: config.go
internal/proxy/: cache.go  fallback.go  server.go  trust.go
internal/registry/: maven.go  registry.go
phoenix-firewall/: LICENSE  README.md  go.mod
phoenix-firewall-action/: README.md  action.yml
phoenix-firewall-action/examples/: basic.yml
phoenix-firewall/.github/workflows/: release.yml
phoenix-firewall/cmd/: root.go  version.go
phoenix-firewall/internal/proxy/: ca.go  handler.go  reporter.go  server_test.go  test_helpers_test.go
phoenix-firewall/src/: evaluate.rs  interceptor.rs  main.rs  proxy.rs
src/: ca.rs  cli.rs  config.rs
(+5 files in other folders)
