[package]
name = "phoenix-firewall"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Phoenix Supply Chain Firewall — MITM proxy for package manager security"
repository = "https://github.com/phoenix-security/phoenix-firewall"

[[bin]]
name = "phoenix-firewall"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# TLS / CA generation
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
tokio-rustls = "0.26"

# HTTP client (for evaluate API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LRU cache
lru = "0.12"

# URL parsing
url = "2"

# Error handling
anyhow = "1"

# Time (for CA certificate validity)
time = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
